[package]
name = "app"
version = "0.1.0"
authors = ["Vardhan Thigle <vardhan.thigle@fortanix.com>"]

[dependencies]
failure = "0.1"
fallible-iterator = "0.2"
fnv = ">= 1.0"
hex = "0.3"
lazy_static = ">= 1.3"
libc = ">= 0.2"
log = { version = "0.4", features = ["std", "serde"] }
regex = ">= 1.1"
serde = ">= 1.0"
serde_derive = ">= 1.0"
twox-hash = ">= 1.2"
# enclave can only use mbedtls for crypto.
mbedtls = {version="0.3.0", default-features = false, features = ["sgx"]}
rand = "0.7.0"