[package]
name = "app"
version = "0.1.0"
authors = ["Vardhan Thigle <vardhan.thigle@fortanix.com>", "Yang Zhou <yangzhou@g.harvard.edu>"]

[dependencies]
failure = "0.1"
fallible-iterator = "0.2"
fnv = ">= 1.0"
lazy_static = ">= 1.3"
regex = ">= 1.1"
serde = ">= 1.0"
serde_derive = ">= 1.0"
rand = "0.7.0"